--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>OmicCoin, Inc.</h1>
-				<p>Our mission is to accelerate the adoption of personalized medicine<br />
-				by providing a secure, private and decentralized database of genomic information. <br />
+				<p>Our mission is to accelerate the adoption of personalized medicine by providing a secure, private and decentralized database of genomic information. <br />
 				The Blockchain is perfectly suited for this endeavor. <br />Together, personalized medicine and the Blockchain have the potential to be one of those most dramatic innovations in healthcare in our lifetimes.</p>
 
 			</header>
@@ -35,7 +34,7 @@
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="https://github.com/omiccoin" class="icon fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="info@omiccoin.io" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="mailto:info@omiccoin.io" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; OmicCoin Inc.</li>
