--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>OmicCoin, Inc.</h1>
+				<h1>OmicCoin</h1>
 				<p>Our mission is to accelerate the adoption of personalized medicine by providing a secure, private and decentralized database of genomic information. <br />
-				The Blockchain is perfectly suited for this endeavor. <br />Together, personalized medicine and the Blockchain have the potential to be one of those most dramatic innovations in healthcare in our lifetimes.</p>
+				The Blockchain is perfectly suited for this endeavor. <br />Together, personalized medicine and the Blockchain have the potential to be one of the most dramatic innovations in healthcare in our lifetimes.</p>
 
 			</header>
 
@@ -37,7 +37,7 @@
 					<li><a href="mailto:info@omiccoin.io" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; OmicCoin Inc.</li>
+					<li>&copy; OmicCoin, Inc.</li>
 				</ul>
 			</footer>
 
