--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<header id="header">
 				<h1>OmicCoin</h1>
 				<p>Our mission is to accelerate the adoption of personalized medicine by providing a secure, private and decentralized database of genomic information. <br />
-				The Blockchain is perfectly suited for this endeavor. <br />Together, personalized medicine and the Blockchain have the potential to be one of the most dramatic innovations in healthcare in our lifetimes.</p>
+				The Blockchain is perfectly suited for this endeavor. <br />Together, personalized medicine and the Blockchain have the potential to be one of the most dramatic healthcare innovations in our lifetimes.</p>
 
 			</header>
 
