--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="https://github.com/omiccoin" class="icon fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://twtter.com/omiccoin" class="icon fa-github"><span class="label">Twitter</span></a></li>
-					<li><a href="https://medium.com/@omiccoin" class="icon fa-github"><span class="label">Medium</span></a></li>
+					<li><a href="https://twtter.com/omiccoin" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://medium.com/@omiccoin" class="icon fa-medium"><span class="label">Medium</span></a></li>
 					<li><a href="mailto:info@omiccoin.io" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
