Draft of new website

--- a/index.html
+++ b/index.html
@@ -1,51 +1,241 @@
 <!DOCTYPE HTML>
 <!--
-	Eventually by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+  Tessellate by HTML5 UP
+  html5up.net | @ajlkn
+  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>OmicCoin</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body>
+  <head>
+    <title>OmicCoin - Personalized medicine on the blockchain</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body>
 
-		<!-- Header -->
-			<header id="header">
-				<h1>OmicCoin</h1>
-				<p>Our mission is to accelerate the adoption of personalized medicine by providing a secure, private and decentralized database of genomic information. <br />
-				The Blockchain is perfectly suited for this endeavor. <br />Together, personalized medicine and the Blockchain have the potential to be one of the most dramatic healthcare innovations in our lifetimes.</p>
+    <!-- Header -->
+      <section id="header" class="dark">
+        <header>
+          <img src="images/logo.png" width=611 height=250>
+        </header>
+        <footer>
+          <a href="#lead-section" class="button scrolly">Learn about personalized medicine on the blockchain</a>
+        </footer>
+      </section>
 
-			</header>
+      <section id="lead-section" class="main">
+        <div class="content style0">
+          <div class="container">
+            <div class="row">
+              <div class="6u 12u(narrow)">
+                <img src="images/lattice.png" width=400 height=671>
+              </div>
+              <div class="6u 12u(narrow)">
+                <h1>OmicCoin provides a secure and decentralized database of personalized genomic data on the blockchain.</h1>
+                <p style="text-align:center">
+                  <br><img src="images/youtube-embed.jpg" width=290 height=170>
+                </p>
+                <p><br><br>Personalized medicine on the Blockchain has the potential to be one of the most dramatic healthcare innovations in our lifetimes.</p>
 
-		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
-			</form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="https://github.com/omiccoin" class="icon fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://twitter.com/omiccoin" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://medium.com/@omiccoin" class="icon fa-medium"><span class="label">Medium</span></a></li>
-					<li><a href="mailto:info@omiccoin.io" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; OmicCoin, Inc.</li>
-				</ul>
-			</footer>
+      <section id="feature-section" class="main">
+        <div class="content dark style1">
+          <div class="container">
+            <div class="row">
+              <div class="3u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-gear"></span></span>
+                  <header>
+                    <h3>Smart health insurance</h3>
+                  </header>
+                  <p>Talk about how insurance will automatically get determined by smart contracts, giving certainty to patients, reducing manual effort for insurance companies and making sure records are imprinted on the blockchain</p>
+                </section>
+              </div>
+              <div class="3u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-user-md"></span></span>
+                  <header>
+                    <h3>Health provider marketplace</h3>
+                  </header>
+                  <p>Talk about how we're going to create a market of doctors who can provide health tips based on really customized information which represents personalized medicine and how it's amazing and how they're going to get ranked and patients get choose the best one like they see in Yelp</p>
+                </section>
+              </div>
+              <div class="3u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-flask"></span></span>
+                  <header>
+                    <h3>Clinical trials recruitment</h3>
+                  </header>
+                  <p>talk about how drug companies and health authorities can select patients to recruit for clinical trials or to adjust their public messaging. Patient privacy is preserved and patients have to give express approval to allow them to see it. They will receive a token payment if their data is selected and they approve it</p>
+                </section>
+              </div>
+              <div class="3u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-database"></span></span>
+                  <header>
+                    <h3>Durable health records</h3>
+                  </header>
+                  <p>Talk about how patients can work with thier laboratories so they can automatically post their encrypted lab results to the Blockchain but no one will ever be able to read it without the patient actually giving approval. This makes record keeping trivial but empowers the patient so they're always controlling the flow of information</p>
+                </section>
+              </div>
+            </div>
+            <div class="row">
+              <div class="3u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-ambulance"></span></span>
+                  <header>
+                    <h3>Critical secure access</h3>
+                  </header>
+                  <p>Talk about how with the blockchian implementation of personalized medicine, if you showed up in the hospital catatonic the doctor could immediately retrieve all your medical history provigin you life saving treatment without delay, trying to identify you or waiting for your medical records</p>
+                </section>
+              </div>
+              <div class="3u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-building-o"></span></span>
+                  <header>
+                    <h3>Smart health insurance</h3>
+                  </header>
+                  <p>talk about how you could get automatically insurance approval for all the different procedures or treatments you qualify for immediately upon availability of your lab results, so no waiting around nervously for the insurance company</p>
+                </section>
+              </div>
+              <div class="3u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-users"></span></span>
+                  <header>
+                    <h3>Personalized treatment</h3>
+                  </header>
+                  <p>talk about how you could get customized, life saving treatment based on your genomic data. Talk about how everyone responds differently to different drugs and you'd get personalized treatment to minimize side effects, get accurate dosing so you get the best treatment the first time</p>
+                </section>
+              </div>
+              <div class="3u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-cloud"></span></span>
+                  <header>
+                    <h3>Anonymous population data</h3>
+                  </header>
+                  <p>talk about how public health authorities can make sweeping, timely recommendations based on more information being available on the blockchain. Public health authorities can also get alerted to localized, spreading symptoms so they could potentially prevent a pandemic!</p>
+                </section>
+              </div>
+            </div>
+            <div class="row">
+              <div class="12u">
+                <footer>
+                  <a href="whitepaper.pdf" class="button scrolly"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Read the whitepaper</a>
+                </footer>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-		<!-- Scripts -->
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+      <section id="team-section" class="main">
+        <div class="content style0">
+          <div class="container">
+            <h2>The team</h2>
+            <div class="row">
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/AndyPark.jpg">
+                <p>Andy Park, CEO</p>
+              </div>
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/LukeCyca.jpg">
+                <p>Luke Cyca, CTO</p>
+              </div>
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/JeremyMullin.jpg">
+                <p>Jeremy Mullin</p>
+              </div>
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/MattBrascia.jpg">
+                <p>Matt Brascia</p>
+              </div>
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/TimGalebach.jpg">
+                <p>Tim Galebach</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content style1 dark">
+          <div class="container">
+            <h2>Advisory Board</h2>
+            <div class="row">
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/MarcoGallo.jpg">
+                <p>Marco Gallo, PhD</p>
+              </div>
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/AllanMah.jpg">
+                <p>Allan Mah, PhD</p>
+              </div>
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/CurtisManning.jpg">
+                <p>Curtis Manning, MD</p>
+              </div>
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/DanielBacinello.jpg">
+                <p>Daniel Bacinello, PhD</p>
+              </div>
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/JaredBowie.jpg">
+                <p>Jared Bowie</p>
+              </div>
+              <div class="person 4u 6u(narrow)">
+                <img class="headshot" src="images/people/MichaelChin.jpg">
+                <p>Michael Chin</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-	</body>
+      <section id="supporters" class="main">
+        <div class="content style0">
+          <div class="container">
+            <h3>A warm thank you to our supporters</h3>
+            <div class="row">
+              <div class="4u 12u(narrow)">
+                <img src="images/sfu.png" width=204 height=152>
+              </div>
+              <div class="4u 12u(narrow)">
+                <img src="images/blockchain_ubc.png" width=210 height=152>
+              </div>
+              <div class="4u 12u(narrow)">
+                <img src="images/fraser_health.png" width=160 height=152>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    <!-- Footer -->
+      <section id="footer">
+        <ul class="icons">
+          <li><a href="https://github.com/omiccoin" class="icon fa-github"><span class="label">GitHub</span></a></li>
+          <li><a href="https://twitter.com/omiccoin" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+          <li><a href="https://medium.com/@omiccoin" class="icon fa-medium"><span class="label">Medium</span></a></li>
+          <li><a href="mailto:info@omiccoin.io" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+        </ul>
+        <div class="copyright">
+          <ul class="menu">
+            <li>&copy; OmicCoin Inc. All rights reserved.</li><li>Website design based on <a href="http://html5up.net">HTML5 UP</a>.</li>
+          </ul>
+        </div>
+      </section>
+
+    <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.scrolly.min.js"></script>
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+      <script src="assets/js/main.js"></script>
+
+  </body>
 </html>
