Added missing photos, refined text copy

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <img src="images/lattice.png" width=400 height=671>
               </div>
               <div class="6u 12u(narrow)">
-                <h1>OmicCoin provides a secure and decentralized database of personalized genomic data on the blockchain.</h1>
+                <h1>OmicCoin aims to accelerate the efforts of personalized medicine by offering a secure and decentralized database of custom health information.</h1>
                 <p style="text-align:center">
                   <br><img src="images/youtube-embed.jpg" width=290 height=170>
                 </p>
-                <p><br><br>Personalized medicine on the Blockchain has the potential to be one of the most dramatic healthcare innovations in our lifetimes.</p>
+                <p><br><br>Personalized medicine leveraging the Blockchain has the potential to be one of the most dramatic healthcare innovations in our lifetimes.</p>
 
               </div>
             </div>
@@ -48,78 +48,60 @@
         <div class="content dark style1">
           <div class="container">
             <div class="row">
-              <div class="3u 12u(narrow)">
-                <section>
-                  <span class="feature-icon"><span class="icon fa-gear"></span></span>
-                  <header>
-                    <h3>Smart health insurance</h3>
-                  </header>
-                  <p>Talk about how insurance will automatically get determined by smart contracts, giving certainty to patients, reducing manual effort for insurance companies and making sure records are imprinted on the blockchain</p>
-                </section>
-              </div>
-              <div class="3u 12u(narrow)">
-                <section>
-                  <span class="feature-icon"><span class="icon fa-user-md"></span></span>
-                  <header>
-                    <h3>Health provider marketplace</h3>
-                  </header>
-                  <p>Talk about how we're going to create a market of doctors who can provide health tips based on really customized information which represents personalized medicine and how it's amazing and how they're going to get ranked and patients get choose the best one like they see in Yelp</p>
-                </section>
-              </div>
-              <div class="3u 12u(narrow)">
-                <section>
-                  <span class="feature-icon"><span class="icon fa-flask"></span></span>
-                  <header>
-                    <h3>Clinical trials recruitment</h3>
-                  </header>
-                  <p>talk about how drug companies and health authorities can select patients to recruit for clinical trials or to adjust their public messaging. Patient privacy is preserved and patients have to give express approval to allow them to see it. They will receive a token payment if their data is selected and they approve it</p>
-                </section>
-              </div>
-              <div class="3u 12u(narrow)">
+              <div class="4u 12u(narrow)">
                 <section>
                   <span class="feature-icon"><span class="icon fa-database"></span></span>
                   <header>
-                    <h3>Durable health records</h3>
+                    <h3>Durable Lab Records</h3>
                   </header>
-                  <p>Talk about how patients can work with thier laboratories so they can automatically post their encrypted lab results to the Blockchain but no one will ever be able to read it without the patient actually giving approval. This makes record keeping trivial but empowers the patient so they're always controlling the flow of information</p>
+                  <p>The power dynamics of health information control now favor the patient. Laboratories post encrypted patients’ test results to the Blockchain. Only the patient can provide read access to third parties.</p>
+                </section>
+              </div>
+              <div class="4u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-user-md"></span></span>
+                  <header>
+                    <h3>Health Tip Marketplace</h3>
+                  </header>
+                  <p>Doctors bid to provide highly customized health tips to patients based on information on the Blockchain. Only when a patient selects a winner does that provider see the patient’s information and send them a health tip.</p>
+                </section>
+              </div>
+              <div class="4u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-gear"></span></span>
+                  <header>
+                    <h3>Smart Health Insurance</h3>
+                  </header>
+                  <p>Insurance companies provide automatic drug authorization based on patient lab results via smart contracts. These tremendous cost savings are passed onto patients through lower premiums.</p>
                 </section>
               </div>
             </div>
             <div class="row">
-              <div class="3u 12u(narrow)">
-                <section>
-                  <span class="feature-icon"><span class="icon fa-ambulance"></span></span>
-                  <header>
-                    <h3>Critical secure access</h3>
-                  </header>
-                  <p>Talk about how with the blockchian implementation of personalized medicine, if you showed up in the hospital catatonic the doctor could immediately retrieve all your medical history provigin you life saving treatment without delay, trying to identify you or waiting for your medical records</p>
-                </section>
-              </div>
-              <div class="3u 12u(narrow)">
-                <section>
-                  <span class="feature-icon"><span class="icon fa-building-o"></span></span>
-                  <header>
-                    <h3>Smart health insurance</h3>
-                  </header>
-                  <p>talk about how you could get automatically insurance approval for all the different procedures or treatments you qualify for immediately upon availability of your lab results, so no waiting around nervously for the insurance company</p>
-                </section>
-              </div>
-              <div class="3u 12u(narrow)">
-                <section>
-                  <span class="feature-icon"><span class="icon fa-users"></span></span>
-                  <header>
-                    <h3>Personalized treatment</h3>
-                  </header>
-                  <p>talk about how you could get customized, life saving treatment based on your genomic data. Talk about how everyone responds differently to different drugs and you'd get personalized treatment to minimize side effects, get accurate dosing so you get the best treatment the first time</p>
-                </section>
-              </div>
-              <div class="3u 12u(narrow)">
+              <div class="4u 12u(narrow)">
                 <section>
                   <span class="feature-icon"><span class="icon fa-cloud"></span></span>
                   <header>
-                    <h3>Anonymous population data</h3>
+                    <h3>Public Health Improvements</h3>
                   </header>
-                  <p>talk about how public health authorities can make sweeping, timely recommendations based on more information being available on the blockchain. Public health authorities can also get alerted to localized, spreading symptoms so they could potentially prevent a pandemic!</p>
+                  <p>With healthcare ecosystem incentives aligned, patient records are securely and rapidly printed to the Blockchain. With patient authorization, public health authorities monitor localized disease symptoms and intervene, potentially preventing a pandemic.</p>
+                </section>
+              </div>
+              <div class="4u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-ambulance"></span></span>
+                  <header>
+                    <h3>Critical Secure Access</h3>
+                  </header>
+                  <p>A patient arrives in a catatonic state in the emergency room. With pre-approved decryption privileges, doctors immediately access the patient’s pharmacogenomic data providing swift, life-saving, and customized treatment.</p>
+                </section>
+              </div>
+              <div class="4u 12u(narrow)">
+                <section>
+                  <span class="feature-icon"><span class="icon fa-flask"></span></span>
+                  <header>
+                    <h3>Clinical Trials Recruitment</h3>
+                  </header>
+                  <p>Drug companies collate a list of potential clinical trial participants by searching patient metadata. A patient is alerted that a drug company is offering payment to access their information. The patient decides, approves and receives payment.</p>
                 </section>
               </div>
             </div>
@@ -141,23 +123,23 @@
             <div class="row">
               <div class="person 4u 6u(narrow)">
                 <img class="headshot" src="images/people/AndyPark.jpg">
-                <p>Andy Park, CEO</p>
+                <p>Andy</p>
               </div>
               <div class="person 4u 6u(narrow)">
                 <img class="headshot" src="images/people/LukeCyca.jpg">
-                <p>Luke Cyca, CTO</p>
+                <p>Luke</p>
               </div>
               <div class="person 4u 6u(narrow)">
                 <img class="headshot" src="images/people/JeremyMullin.jpg">
-                <p>Jeremy Mullin</p>
+                <p>Jeremy</p>
               </div>
               <div class="person 4u 6u(narrow)">
                 <img class="headshot" src="images/people/MattBrascia.jpg">
-                <p>Matt Brascia</p>
+                <p>Matt</p>
               </div>
               <div class="person 4u 6u(narrow)">
                 <img class="headshot" src="images/people/TimGalebach.jpg">
-                <p>Tim Galebach</p>
+                <p>Tim</p>
               </div>
             </div>
           </div>
