make intro sentence shorter

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <img src="images/lattice.png" width=400 height=671>
               </div>
               <div class="6u 12u(narrow)">
-                <h1>OmicCoin aims to accelerate the efforts of personalized medicine by offering a secure and decentralized database of custom health information.</h1>
+                <h1>Our mission is to accelerate the uptake of personalized medicine.</h1>
                 <p style="text-align:center">
                   <br><img src="images/youtube-embed.jpg" width=290 height=170>
                 </p>
-                <p><br><br>Personalized medicine leveraging the Blockchain has the potential to be one of the most dramatic healthcare innovations in our lifetimes.</p>
+                <p><br><br>Fueled by decentralized ledger technologies, OmicCoin aims to align the interests of different players in the healthcare ecosystem. Personalized medicine leveraging the Blockchain has the potential to be one of the most dramatic healthcare innovations of our lifetimes.</p>
 
               </div>
             </div>
