--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <header>
                     <h3>Durable Lab Records</h3>
                   </header>
-                  <p>The power dynamics of health information control now favor the patient. Laboratories post encrypted patients’ test results to the Blockchain. Only the patient can provide read access to third parties.</p>
+                  <p>The power dynamics of health information control now favor the patient. Laboratories post patients’ encrypted test results to the Blockchain. Only the patient can provide read access to third parties.</p>
                 </section>
               </div>
               <div class="4u 12u(narrow)">
@@ -63,7 +63,7 @@
                   <header>
                     <h3>Health Tip Marketplace</h3>
                   </header>
-                  <p>Doctors bid to provide highly customized health tips to patients based on information on the Blockchain. Only when a patient selects a winner does that provider see the patient’s information and send them a health tip.</p>
+                  <p>Doctors bid to provide highly customized health tips to patients based on information on the Blockchain. Only when a patient selects a winner does that doctor see the patient’s information and send them a health tip.</p>
                 </section>
               </div>
               <div class="4u 12u(narrow)">
@@ -72,7 +72,7 @@
                   <header>
                     <h3>Smart Health Insurance</h3>
                   </header>
-                  <p>Insurance companies provide automatic drug authorization based on patient lab results via smart contracts. These tremendous cost savings are passed onto patients through lower premiums.</p>
+                  <p>Insurance companies provide automatic drug authorization based on patient lab results via smart contracts. The insurance company enjoys tremendous cost savings, which are shared with patients through lower premiums.</p>
                 </section>
               </div>
             </div>
@@ -92,7 +92,7 @@
                   <header>
                     <h3>Critical Secure Access</h3>
                   </header>
-                  <p>A patient arrives in a catatonic state in the emergency room. With pre-approved decryption privileges, doctors immediately access the patient’s pharmacogenomic data providing swift, life-saving, and customized treatment.</p>
+                  <p>A patient arrives in a catatonic state in the emergency room. With pre-approved decryption privileges, doctors immediately access the patient’s pharmacogenomic data, providing swift, customized, and life-saving treatment.</p>
                 </section>
               </div>
               <div class="4u 12u(narrow)">
