--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p style="text-align:center">
                   <br><img src="images/youtube-embed.jpg" width=290 height=170>
                 </p>
-                <p><br><br>Fueled by decentralized ledger technologies, OmicCoin aims to align the interests of different players in the healthcare ecosystem. Personalized medicine leveraging the Blockchain has the potential to be one of the most dramatic healthcare innovations of our lifetimes.</p>
+                <p><br><br>Fueled by decentralized ledger technologies, OmicCoin aims to align the interests of different players in the healthcare ecosystem. Personalized medicine leveraging the blockchain has the potential to be one of the most dramatic healthcare innovations of our lifetimes.</p>
 
               </div>
             </div>
@@ -119,7 +119,7 @@
       <section id="team-section" class="main">
         <div class="content style0">
           <div class="container">
-            <h2>The team</h2>
+            <h2>The Team</h2>
             <div class="row">
               <div class="person 4u 6u(narrow)">
                 <img class="headshot" src="images/people/AndyPark.jpg">
@@ -146,7 +146,7 @@
         </div>
         <div class="content style1 dark">
           <div class="container">
-            <h2>Advisory Board</h2>
+            <h2>Advisory Group</h2>
             <div class="row">
               <div class="person 4u 6u(narrow)">
                 <img class="headshot" src="images/people/MarcoGallo.jpg">
